documentation and image changes
